--- a/b2bdatalog/b2bdatalog.tex
+++ b/b2bdatalog/b2bdatalog.tex
@@ -198,19 +198,15 @@ successful attempt at creating a distributed implemention has been Nexus\cite{ne
 and makes use of its most advanced feature, incremental stream processing.
 \section{Background}
 
-In this section we review the basics of all concepts related to datalog evaluation, as it is done in the current time.
-
-\subsection{Datalog}
-% Kalmer: This subsections should be really short as everybody who reads this paper already knows about datalog. But we cannot delete it completely as then we wont have definitions.
-
 \textit{Datalog}\cite{datalog} is a declarative programming language. A program $P$ is a set of
-rules $r$, with each $r$ being a restriction of tuple-generating dependencies: \[\bigwedge_{i=1}^kB_i(x_1, ..., x_j) \rightarrow \exists (y_1, ..., y_j)H(x_1, ..., x_j, y_1, ..., y_j)\]
-with $k$, $j$ as finite integers, $x$ and $y$ as terms, and each $B_i$ and $H$ as predicates. A term can belong
-either to the set of variables, or constants, however, it is to be noted that all $y$ are existentially quantified.
-The set of all $B_i$ is called the \textit{body}, and $H$ the \textit{head}.
+rules $r$, with each $r$ being a restriction of tuple-generating dependencies: \[\bigwedge_{i=1}^kB_i(x_1, ..., x_j) \rightarrow H(x_1, ..., x_j)\]
+with $k$, $j$ as finite integers, $x$ as terms, and each $B_i$ and $H$ as predicates. A term can belong
+either to the set of variables, or constants. The set of all $B_i$ is called the \textit{body}, and $H$ the \textit{head}.
 
-A rule $r$ is said to be datalog, if the set of all $y$ is empty, and no predicate is negated, conversely, a
-datalog program is one in which all rules are datalog.
+A rule $r$ is said to be datalog, if no predicate is negated, and all variables in the head appear somewhere in the body,
+thereby not there being the possibility for existential variables to exist, conversely, a datalog program is one in which
+all rules are datalog.
+
 \begin{exmp}{Datalog Program}\label{ex1}
 	\[
 		P = \left\{  \begin{array}{l}
@@ -222,167 +218,62 @@ Example \ref{ex1} shows a simple valid recursive program. The only rule denotes 
 	in a SubClassOf relation with y, and y is in a SubClassOf relation with z, then it follows that x is in a subClassOf
 	relation with z}.
 
-The meaning of a datalog program is often\cite{datalog} defined through a \textit{Herbrand Interpretation}. The first step
-to attain it is the \textit{Herbrand Universe} $\mathfrak{U}$, the set of all constant, commonly referred to as \textit{ground}, terms.
-\begin{exmp}{Herbrand Universe}\label{ex2}
-	% \[
-	%   S = \left\{ \begin{array}{l}
-	%     \text{SubClassOf}(\text{professor}, \text{employee}) \\
-	%     \text{SubClassOf}(\text{employee}, \text{taxPayer})  \\
-	%     \text{SubClassOf}(\text{employee}, \text{employed})  \\
-	%     \text{SubClassOf}(\text{employed}, \text{employee})
-	%   \end{array}\right\}
-	% \]
-	% \[
-	%   \mathfrak{U} = \left\{  \begin{array}{l}
-	%     \text{professor}, \text{employee}, \text{employed}, \text{taxPayer}
-	%   \end{array}\right\}
-	% \]
-	...
-\end{exmp}
-From the shown universe on example \ref{ex2}, it is possible to build The \textit{Herbrand Base}, the set of all possible truths,
-from \textit{facts}, assertions that are true, as represented by the actual constituents of the SubClassOf set.
-\begin{exmp}{Herbrand Base}\label{ex3}
-	...
-	% \[
-	%   \mathfrak{B} = S \cup \left\{  \begin{array}{l}
-	%     \text{SubClassOf}(\text{professor}, {professor}) \\
-	%     \text{SubClassOf}(\text{employee}, {employee})   \\
-	%     \text{SubClassOf}(\text{employed}, {employed})   \\
-	%     \text{SubClassOf}(\text{taxPayer}, {taxPayer})   \\
-	%     \text{SubClassOf}(\text{professor}, {taxPayer})  \\
-	%     \text{SubClassOf}(\text{taxPayer}, {professor})  \\
-	%     \text{SubClassOf}(\text{employee}, {professor})  \\
-	%     \text{SubClassOf}(\text{taxPayer}, {employee})
-	%   \end{array}\right\}
-	% \]
-\end{exmp}
-On example \ref{ex3}, all facts are indeed \textit{possible}, but not necessarily \textit{derivable} from the actual data and
-program. An interpretation $I$ is a subset of $\mathfrak{B}$, and a \textit{model} is an interpretation such that all rules
-are satisfied. A rule is satisfied if either the head is true, or if the body is not true.
-\begin{exmp}{Models}\label{ex4}
-	...
-	% \[
-	%   I_1 = S \cup \left\{  \begin{array}{l}
-	%     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
-	%     \text{SubClassOf}(\text{employee}, {employee})
-	%   \end{array}\right\}
-	% \]
-	% \[
-	%   I_2 = S \cup \left\{  \begin{array}{l}
-	%     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
-	%     \text{SubClassOf}(\text{employee}, {employee})  \\
-	%     \text{SubClassOf}(\text{employed}, {employed})
-	%   \end{array}\right\}
-	% \]
-	% \[
-	%   I_3 = S \cup \left\{  \begin{array}{l}
-	%     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
-	%     \text{SubClassOf}(\text{employee}, {employee} ) \\
-	%     \text{SubClassOf}(\text{employed}, {employed})  \\
-	%     \text{SubClassOf}(\text{professor, professor})
-	%   \end{array}\right\}
-	% \]
-\end{exmp}
-The first interpretation, $I_1$, from example \ref{ex4}, is not a model, since $\text{SubClassOf}(\text{employed}, \text{employed})$ is satisfied
-and present. Despite both $I_2$ and $I_3$ being models, $I_2$ is the \textit{minimal} model, which is the definition of the meaning of the program
-over the data. The input data, the database, is named as the \textit{Extensional Database} $EDB$, and the output of the program is the \textit{Intensional Database}
-$IDB$.
+Programs denote implications over a store of ground facts. This store is called the extensional database, $EDB$, and the result
+of evaluating a program over some $EDB$ is the $IDB$, the intensional database.
 
-Let an $DB = EDB \cup IDB$, and for there to be a program $P$. We define the \textit{immediate consequence} of $P$ over $DB$ as all facts
-that are either in $DB$, or stem from the result of applying the rules in $P$ to $DB$. The \textit{immediate consequence operator}
-$\textbf{I}_C(DB)$ is the union of $DB$ and its immediate consequence, and the $IDB$, at the moment of the application of $\textbf{I}_C(DB)$
-is the difference of the union of all previous $DB$ with the $EDB$.
+Let $DB = EDB \cup IDB$, and for there to be a program $P$. We define the \textit{immediate consequence} of $P$ over $DB$ as
+all facts that are either in $DB$, or stem from the result of applying the rules in $P$ to $DB$. The \textit{immediate consequence operator}
+$\textbf{I}_C(DB)$ is the union of $DB$ and its immediate consequence, and the $IDB$, at the moment of the
+application of $\textbf{I}_C(DB)$ is the difference of the union of all previous $DB$ with the $EDB$.
 
-
-It is trivial to see that $I_C(DB)$ is monotone, and given that both the $EDB$ and $P$ are finite sets, and that $IDB = \emptyset$ at the start,
-at some point $I_C(DB) = DB$, since there won't be new facts to be inferred. This point is the \textit{least fixed point} of $I_c(DB)$\cite{datalog},
-and happens to be the \textit{minimal} model.
-
-is called \textit{naive} evaluation. Every number indicates one rendering of the immediate consequence. As it can be seen by 3 and 4, at some point $DB$ equals $I_C(DB)$, from which onwards no more new tuples will be inferred, therefore halting.
-
-The ubiquitous evaluation mechanism, as of the date of writing this paper, is the \textit{semi-naive} one. The difference is that \textit{semi-naive} does not repeatedly union the $EDB$ with the entire $IDB$, but does so only with the difference of the previous immediate consequence with the $IDB$. This can be hinted from the example, where each next application of $I_c$ only renders new facts from the previous newly derived ones.
+It is trivial to see that $I_C(DB)$ is monotone, and given that both the $EDB$ and $P$ are finite sets, and
+that $IDB = \emptyset$ at the start, at some point $I_C(DB) = DB$, since there won't be new facts to be inferred. This
+point is the \textit{least fixed point} of $I_c(DB)$\cite{datalog}. Computing the \textit{least fixed point} as
+described, recursively applying the immediate consequence, is called Naive evaluation.
 
 \subsection{Semi-Naive Evaluation}
 
-The semi-naive evaluation algorithm \cite{datalog} is a widely-used technique for efficiently handling additions in Datalog evaluation. Given a Datalog program $P$ and an initial fact set $F$, the algorithm iteratively computes the derived facts $D$ by maintaining a set of new facts $D^+$ that are generated in each iteration. The algorithm can be summarized as follows:
+The semi-naive evaluation algorithm \cite{datalog} is a widely-used technique for improving naive evaluation.
+Given a Datalog program $P$ and an $EDB$, the algorithm iteratively computes the $IDB$ in the same manner as
+naive evaluation, with the addition of maintaining a set of new delta facts $\Delta^+$ that are generated in
+each iteration, that are utilized in a new delta program $\Delta^+P$.
 
-\begin{enumerate}
-	\item Initialize the derived facts set $D \leftarrow F$ and the new facts set $D^+ \leftarrow F$.
+Given a program $P$ with rules $r_0, ..., r_n$, with bodies $b(r) = \{b_0, ..., b_k\}$ and heads $h(r)$, the
+delta program will generate one new $\Delta$rule for each $b_j$ in each rule body $b(r_i)$, in order to
+represent that only facts that have been recently inferred are being taken into account.
 
-	\item While $D^+ \neq \emptyset$, perform the following steps:
-	      \begin{enumerate}
-		      \item For each rule $r \in P$, generate the set of new facts $D^+_r$ that can be derived using $r$ and the facts in $D^+$, without considering the facts in $D$ that were derived in previous iterations.
+\begin{exmp}{Semi-naive Evaluation Delta Program}
+	\tiny
+	\begin{align}
+		P = \{ TC(?x, ?z) \leftarrow TC(?x, ?y), TC(?y, ?z); TC(?x, ?y) \leftarrow Edge(?x, ?y) \} \nonumber                                                           \\
+		r_0 = TC(?x, ?y) \leftarrow Edge(?x, ?y)                                                                                                                       \\
+		\Delta r_1 = TC(?x, ?z) \leftarrow \Delta TC(?x, ?y), TC(?y, ?z)                                                                                     \nonumber \\
+		\Delta r_2 = TC(?x, ?z) \leftarrow TC(?x, ?y), \Delta TC(?y, ?z)
+	\end{align}
+	\label{exsne}
+\end{exmp}
 
-		      \item Update the new facts set: $D^+ \leftarrow \bigcup_{r \in P} D^+_r$.
-
-		      \item Update the derived facts set: $D \leftarrow D \cup D^+$.
-	      \end{enumerate}
-\end{enumerate}
-
-The semi-naive evaluation algorithm improves the efficiency of Datalog evaluation by avoiding the recomputation of facts that have already been derived in previous iterations. This method is particularly efficient for certain classes of Datalog programs that are common in practice.
+In theory, the semi-naive evaluation algorithm improves the efficiency of Datalog evaluation by avoiding
+the recomputation of facts that have already been derived in previous iterations. This method is particularly
+efficient for certain classes of Datalog programs that are common in practice. Example \ref{exsne} shows
+the generated $\Delta$ program. It is worth noting, that there are substantial implementation challenges in order
+to ensure that its overhead is not larger than the performance gains, since it possibly requires multiple
+indexes and set operations to keep track of the most recently inferred facts.
 
 \subsection{Delete-Rederive}
 
-The delete-rederive algorithm \cite{dred} addresses the challenge of handling retractions efficiently in Datalog evaluation. Given a Datalog program $P$ and a set of retracted facts $R$, the algorithm operates in two main steps:
+Both the regular semi-naive and naive evaluation methods are already incremental, and easily handles the
+addition of data. One merely has to continue the evaluation with all previous data as the most recent delta.
 
-\begin{enumerate}
-	\item \textbf{Over-Deletion}: Construct an over-deletion program $P_{\text{OD}}$ by replacing each rule $r \in P$ with a rule $r'$ such that $r'$ contains only facts from the set $R$ in the rule body. The over-deletion program computes the set of possible deletions $D_{\text{OD}}$ caused by the retraction of facts in $R$.
+The most used method for handling deletions is a bottom-up algorithm\cite{dred} that uses semi-naive evaluation
+to evaluate two new programs, one that computes all possible deletions that could stem from the deletion of the
+facts being retracted, and then another that attempts to find alternative derivations to the overdeleted ones.
 
-	\item \textbf{Alternate Derivation}: Create an alternate derivation program $P_{\text{AD}}$ by retaining only the rules in $P$ that could potentially generate an alternative derivation for a fact in $D_{\text{OD}}$. Compute the set of facts $D_{\text{AD}}$ that can be derived by the alternate derivation program. The actual facts to be deleted are given by the set difference: $D = D_{\text{OD}} \setminus D_{\text{AD}}$.
-\end{enumerate}
+Given a program $P$ with rules $r_0, ..., r_n$, with bodies $b(r) = \{b_0, ..., b_k\}$ and heads $h(r)$, the
+overdeletion program will generate one new $-$rule for each $b_j$ in each rule body $b(r_i)$, in order to represent
+that if such fact were to be deleted, then $h(r_i)$ would not hold true.
 
-The delete-rederive algorithm enables the maintenance of Datalog materialization by focusing on the consequences of the retracted facts, rather than re-evaluating the entire program from scratch. However, this approach introduces different performance characteristics for handling additions and deletions in Datalog evaluation, which could lead to performance biases in certain scenarios.
-
-\subsection{Infer}
-The most relevant performance-oriented aspect of both of the introduced evaluation mechanisms is the implementation of $I_c$ itself. The two
-most high-profile methods to do so are either purely evaluating the rules, or rewriting them in some other imperative formalism, and executing it.
-
-The Infer\cite{datalog} method is the simplest example of the former, and relies on substitutions. A substitution $S$ is a homomorphism
-$[x_1 \rightarrow y_1, ..., x_i \rightarrow y_i]$, such that $x_i$ is a variable, and $y_i$ is a constant. Given a not-ground fact,
-such as $TC(?x, 4)$, \textit{applying} the substitution $[?x \rightarrow 1]$ to it will yield the ground fact $TC(1, 4)$.
-
-Infer relies on attempting to build and extend substitutions for each fact in each rule body over every single $DB$ fact. Once
-all substitutions are made, they are applied to the heads of each rule. Every result of this application that is ground belongs
-to the immediate consequence.
-
-\subsection{Relational Algebra}
-Relational Algebra\cite{codd_1970} explicitly denotes operations over sets of tuples with fixed arity, relations. It is
-the most popular database formalism that there is, with virtually every single major database system adhering to the relational model\cite{pg,mysql,sqlserver}
-and using SQL as a declarative syntax for relational algebra.
-
-Let $R$ and $T$ be relations with arity $r$ and $t$, $\theta$ be a binary operation with a boolean output, $R(i)$ be the i-th column, all terms in the i-th position of every tuple in $R$, and
-$R[h, ..., k]$ be the subset of $R$ such that only the columns $h, ..., k$ remain, and Const the set of all constant terms. The following
-are the most relevant relational algebra operators and their semantics:
-\begin{itemize}
-	\item Selection by column $\sigma_{i=j)}(R) = \{ a \in R | a(i) == a(j) \}$
-	\item Selection by value $\sigma_{i=k}(R) = \{a \in R | a(i) == k \}$
-	\item Projection $\pi_{h, ..., k}(R) = \{(R(i), ..., R(j), \overrightarrow{C}) |  i, j >= 1 \wedge i, j <= r\ \wedge \forall c \in C. c \in \text{Const}$
-	\item Product $\times(R, T) = \{(a, b) | a \in R \wedge b \in T \}$
-	\item Join $\Join_{i=j} = \{(a, b) | a \in R \wedge b \in T \wedge a(i) == b(j)\}$
-\end{itemize}
-
-Rewriting datalog into some form of relational algebra has been the most successful strategy employed by the vast majority of all current state-of-the-art
-reasoners\cite{bigdatalog, cog, nexus, recstep, dcdatalog, souffle} mostly due to the extensive industrial and academic research into developing data processing frameworks that
-process very large amounts of data, and the techniques that have arisen from these.
-
-In spite of this, there is no open-source library that provides a stand-alone datalog to relational algebra translator, therefore every single
-datalog evaluator has to repeat this effort. Moreover, datalog rules translate to a specific form of relational algebra expressions, the
-select-project-join $\mathcal{SPJ}$ form.
-
-A relational algebra expression is in the $\mathcal{SPJ}$ form if it consists solely of select, project and join operators. This form
-is very often seen in practice, being equivalent to \verb|SELECT ... FROM ... WHERE ...| SQL queries, and highly benefits from being
-equivalent to conjunctive queries, that are equivalent to single-rule and non-recursive datalog programs.
-
-\section{Delete Rederive}
-
-The regular semi-naive evaluation method is already incremental, and easily handles the addition of data. One merely has to continue the evaluation with all previous data as the most recent delta.
-
-The most used method for handling deletions is a bottom-up algorithm\cite{dred} that uses semi-naive evaluation to evaluate two new programs, one that computes all possible deletions that could stem from the deletion of the facts being retracted, and then another that attempts to find alternative derivations to the overdeleted ones.
-
-Given a program $P$ with rules $r_0, ..., r_n$, with bodies $b(r) = \{b_0, ..., b_k\}$ and heads $h(r)$, the overdeletion program will generate one new $-$rule for each $b_j$ in each rule body $b(r_i)$, in order to represent that if such fact were to be deleted, then $h(r_i)$ would not hold true.
-
-\begin{exmp}{DRED Overdeletion program}
+\begin{exmp}{DRED Overdeletion Program}
 	\tiny
 	\begin{align}
 		P = \{ TC(?x, ?z) \leftarrow Edge(?x, ?y), TC(?y, ?z); TC(?x, ?y) \leftarrow Edge(?x, ?y) \} \nonumber                                                \\
@@ -393,9 +284,14 @@ Given a program $P$ with rules $r_0, ..., r_n$, with bodies $b(r) = \{b_0, ..., 
 	\label{ex6}
 \end{exmp}
 
-On example \ref{ex6} negative predicates represent overdeletion targets. For instance, if \verb|Edge(2, 3)| is being deleted, then \verb|TC(2, 3)| will be deleted, and any other inferred fact that depends on it. Given that it is a regular datalog program, it can be efficiently evaluated with semi-naive evaluation.
+On example \ref{ex6} negative predicates represent overdeletion targets. For instance, if \verb|Edge(2, 3)| is
+being deleted, then \verb|TC(2, 3)| will be deleted, and any other inferred fact that depends on it. Given that
+it is a regular datalog program, it can be efficiently evaluated with semi-naive evaluation.
 
-The next step is to compute the alternative derivations of the deleted facts, since some overdeleted facts might still hold true. The alternative derivation program will generate one new $+$rule for each $r_i$ in $P$, with one extra $-$ head predicate per body, representing an overdeleted fact. The $+$ program requires the overdeleted facts to not be present.
+The next step is to compute the alternative derivations of the deleted facts, since some overdeleted facts might
+still hold true. The alternative derivation program will generate one new $+$rule for each $r_i$ in $P$, with
+one extra $-$ head predicate per body, representing an overdeleted fact. The $+$ program requires the overdeleted
+facts to not be present.
 
 \begin{exmp}{DRED Alternative Rederivation}
 	\tiny
@@ -407,9 +303,59 @@ The next step is to compute the alternative derivations of the deleted facts, si
 	\label{ex7}
 \end{exmp}
 
-The output relations from example \ref{ex7} represent the data that has to be put back into the materialization. The rationale for alternative derivations is that, for $r_1$, for instance, if the edge \verb|TC(3, 4)| was overdeleted, because of there being \verb|Edge(1, 2)| and \verb|TC(2, 3)|, if \verb|Edge(3, 4)| was not deleted, by rule $r_0$, then there is an alternative derivation for \verb|TC(3, 4)|.
+The output relations from example \ref{ex7} represent the data that has to be put back into the materialization.
+The rationale for alternative derivations is that, for $r_1$, for instance, if the edge \verb|TC(3, 4)| was
+overdeleted, because of there being \verb|Edge(1, 2)| and \verb|TC(2, 3)|, if \verb|Edge(3, 4)| was not deleted, by
+rule $r_0$, then there is an alternative derivation for \verb|TC(3, 4)|.
 
-As it can be seen, computing the maintenance of the materialization implies evaluating a program bigger than the materialization itself, however, due to the fact that it is evaluated with semi-naive evaluation in itself, the asymptotic complexity remains the same\cite{complexity_of_dred}. Nonetheless, in practice, deletion is often much slower than addition.
+As it can be seen, computing the maintenance of the materialization implies evaluating a program bigger than the
+materialization itself, however, due to the fact that it is evaluated with semi-naive evaluation, the asymptotic
+complexity remains the same\cite{complexity_of_dred}. Nonetheless, in practice, deletion is often much slower than
+addition, as it can be trivially seen by the worst-possible scenario, in which all facts are deleted, where while
+materialization would be free, DRED would inquire an expensive overdeletion computation.
+
+\subsection{Infer}
+The most relevant performance-oriented aspect of both of the introduced evaluation mechanisms is the implementation
+of $I_c$ itself. The two most high-profile methods to do so are either purely evaluating the rules, or rewriting
+them in some other imperative formalism, and executing it.
+
+The Infer\cite{datalog} method is the simplest example of the former, and relies on substitutions. A substitution $S$ is a homomorphism
+$[x_1 \rightarrow y_1, ..., x_i \rightarrow y_i]$, such that $x_i$ is a variable, and $y_i$ is a constant. Given a not-ground fact,
+such as $TC(?x, 4)$, \textit{applying} the substitution $[?x \rightarrow 1]$ to it will yield the ground fact $TC(1, 4)$.
+
+Infer relies on attempting to build and extend substitutions for each fact in each rule body over every single $DB$ fact. Once
+all substitutions are made, they are applied to the heads of each rule. Every result of this application that is ground belongs
+to the immediate consequence.
+
+\subsection{Relational Algebra}
+Relational Algebra\cite{codd_1970} explicitly denotes operations over sets of tuples with fixed arity, relations. It is
+the most popular database formalism that there is, with virtually every single major database system adhering to the
+relational model\cite{pg,mysql,sqlserver} and using SQL as a declarative syntax for relational algebra.
+
+Let $R$ and $T$ be relations with arity $r$ and $t$, $\theta$ be a binary operation with a boolean output, $R(i)$ be
+the i-th column, all terms in the i-th position of every tuple in $R$, and $R[h, ..., k]$ be the subset of $R$ such
+that only the columns $h, ..., k$ remain, and Const the set of all constant terms. The following are the most relevant
+relational algebra operators and their semantics:
+\begin{itemize}
+	\item Selection by column $\sigma_{i=j)}(R) = \{ a \in R | a(i) == a(j) \}$
+	\item Selection by value $\sigma_{i=k}(R) = \{a \in R | a(i) == k \}$
+	\item Projection $\pi_{h, ..., k}(R) = \{(R(i), ..., R(j), \overrightarrow{C}) |  i, j >= 1 \wedge i, j <= r\ \wedge \forall c \in C. c \in \text{Const}$
+	\item Product $\times(R, T) = \{(a, b) | a \in R \wedge b \in T \}$
+	\item Join $\Join_{i=j} = \{(a, b) | a \in R \wedge b \in T \wedge a(i) == b(j)\}$
+\end{itemize}
+
+Rewriting datalog into some form of relational algebra has been the most successful strategy employed by the vast majority of all
+current state-of-the-art reasoners\cite{bigdatalog, cog, nexus, recstep, dcdatalog, souffle} mostly due to the extensive industrial
+and academic research into developing data processing frameworks that process very large amounts of data, and the techniques that
+have arisen from these.
+
+In spite of this, there is no open-source library that provides a stand-alone datalog to relational algebra translator, therefore every single
+datalog evaluator has to repeat this effort. Moreover, datalog rules translate to a specific form of relational algebra expressions, the
+select-project-join $\mathcal{SPJ}$ form.
+
+A relational algebra expression is in the $\mathcal{SPJ}$ form if it consists solely of select, project and join operators. This form
+is very often seen in practice, being equivalent to \verb|SELECT ... FROM ... WHERE ...| SQL queries, and highly benefits from being
+equivalent to conjunctive queries, that are equivalent to single-rule and non-recursive datalog programs.
 
 \section{Differential Datalog}
 
@@ -417,12 +363,6 @@ As it can be seen, computing the maintenance of the materialization implies eval
 streaming-and-distributed computational model that extends the dataflow paradigm. The timely
 in its name refers to it thoroughly establishing the semantics of each aspect of communication
 notification, taking the parallelization blueprint and making its execution transparent to the user.
-
-% A notification sent between operators is assigned a timestamp, that needs only to be partially
-% ordered, with no assumptions being made with respect to insertion. The goal is to use these to
-% correctly reason about the data with respect to the local operator states' of computation completion,
-% in order to cleverly know with certainty when not only whether should work be done asynchronously
-% or with sharding, but whether there is data yet to be processed or not.
 
 \emph{Differential dataflow}, a generalization of incremental processing, is an extension to the
 timely dataflow model. While the shape of the data that flows in the latter is in the form
