Fully reworked the introduction and background sections.

--- a/b2bdatalog/b2bdatalog.tex
+++ b/b2bdatalog/b2bdatalog.tex
@@ -481,7 +481,7 @@ trace, is a structure that represents the state of a collection since the latest
 of batches of updates, with each batch possibly being merged with other batches, that make up an LSM-Tree~\cite{lsm}, therefore benefitting from its compaction mechanism
 to ensure that only a logarithmic number of batches exist.
 
-\section{Experiments}
+\section{Benchmarks}
 
 The aim of the experiments is to showcase relative performance, and scalability. Given that all reasoners to be compared share as much code as possible, are written in the same
 programming language, and use the same elementary memory model, possibly strong empirical statements can be made with respect to the specificities of their implementation.
